<resources>
  <string name="app_name">Currencies</string>
  <string name="title_activity_splash">Splash</string>
  <string name="foreign_currency">Foreign Currency</string>
  <string name="enter_foreign_currency_amount_here">Enter foreign currency amount here:</string>
  <string name="calculate">Calculate</string>
  <string name="home_currency">Home Currency</string>
  <string name="calculated_result_in_home_currency">Calculated result in home currency:</string>
  <string name="search_active_codes">search active codes</string>
  <string name="invert_codes">invert codes</string>
  <string name="not_on_line">You must be online to do this action.</string>
  <string name="exit">exit</string>
  <string name="calculating_result">Calculating Result...</string>
  <string name="one_moment_please">One moment please...</string>
  <string name="cancel">Cancel</string>
  <string name="error_to_conver_json">Error trying to convert values from exchange service</string>
  <string name="amount_null">A value to exchange must be informed</string>
</resources>
