<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#000"
              android:orientation="vertical">
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="20"
    android:orientation="vertical">
    <TextView
      android:text="@string/foreign_currency"
      style="@style/label.curr"/>
    <Spinner
      android:id="@+id/spn_for"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_weight="55"
      android:gravity="top"/>
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:gravity="bottom"
      android:text="@string/enter_foreign_currency_amount_here"
      style="@style/label.desc"/>
  </LinearLayout>
  <LinearLayout
    style="@style/layout_back">
    <EditText
      android:id="@+id/edt_amount"
      android:layout_width="fill_parent"
      android:layout_height="50dp"
      android:layout_gravity="center_vertical"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
      android:background="#111"
      android:digits="0123456789."
      android:gravity="center_vertical"
      android:inputType="numberDecimal"
      android:textColor="@color/white"
      android:textSize="30sp">
      <requestFocus/>
    </EditText>
  </LinearLayout>
  <Button
    android:id="@+id/btn_calc"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_weight="10"
    android:text="@string/calculate"
    android:textColor="@color/white"
    android:background="@drawable/button_selector"/>
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="20"
    android:orientation="vertical">
    <TextView
      android:text="@string/home_currency"
      style="@style/label.curr"/>

    <ProgressBar
      style="?android:attr/progressBarStyleSmall"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/progressBar"/>

    <Spinner
      android:id="@+id/spn_hom"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_weight="55"
      android:gravity="top"/>
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_weight="15"
      android:gravity="bottom"
      android:text="@string/calculated_result_in_home_currency"
      android:textColor="@color/grey_med"
      android:textSize="12sp"/>
  </LinearLayout>
  <LinearLayout
    style="@style/layout_back">
    <TextView
      android:id="@+id/txt_converted"
      android:layout_width="fill_parent"
      android:layout_height="50dp"
      android:layout_gravity="center_vertical"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
      android:background="@color/grey_med_dark"
      android:gravity="center_vertical"
      android:textSize="30sp"
      android:textColor="@color/white"
      android:typeface="normal"/>
  </LinearLayout>
</LinearLayout>